--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 qdrant-client = "^1.9.2"
+numpy = "^2.0.0"
+pandas = "^2.2.2"
+ginza = "^5.2.0"
+ja-ginza = "^5.2.0"
 
 
 [build-system]
