--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-qdrant-client = "^1.9.2"
-numpy = "^2.0.0"
+qdrant-client = "1.9.2"
+numpy = "^1.23.5"
 pandas = "^2.2.2"
 ginza = "^5.2.0"
 ja-ginza = "^5.2.0"
 chardet = "^5.2.0"
+spacy = "^3.7.5"
+thinc = "8.2.2"
 
 
 [build-system]
